--- a/index.html
+++ b/index.html
@@ -29,25 +29,30 @@
   <script type="text/javascript" src="app/appRoute.js"></script>
   <script type="text/javascript" src="app/app.js"></script>
 
-  <link rel="stylesheet" type="text/css" href="bower_components/materialize/dist/css/materialize.min.css" media="screen,projection">
+  <link rel="stylesheet" type="text/css" href="bower_components/materialize/dist/css/materialize.css" media="screen,projection">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 
   <link rel="stylesheet" type="text/css" href="app/css/mystyle.css">
 
-
-
 </head>
 
 
-<body ng-controller="MainController">
+<body>
 
+<div ng-include="'app/views/header.html'"></div>
 
-
+<main>
+  <div class="container">
 
     <!-- Page Content goes here -->
-    {{me}}
     <div ng-view=""></div>
+
+  </div>
+</main>
+
+<div ng-include="'app/views/footer.html'"></div>
+
 
 
 </body>
