--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
   <script type="text/javascript" src="bower_components/ng-table/dist/ng-table.js"></script>
   <link rel="stylesheet" type="text/css" href="bower_components/ng-table/dist/ng-table.css">
 
-
+  <script type="text/javascript" src="app/services/entrepriseService.js"></script>
+  <script type="text/javascript" src="app/services/loginService.js"></script>
+  <script type="text/javascript" src="app/services/signUpService.js"></script>
 
   <script type="text/javascript" src="app/controllers/dashBoardController.js"></script>
   <script type="text/javascript" src="app/controllers/loginController.js"></script>
   <script type="text/javascript" src="app/controllers/signUpController.js"></script>
 
-  <script type="text/javascript" src="app/services/entrepriseService.js"></script>
-  <script type="text/javascript" src="app/services/loginService.js"></script>
-  <script type="text/javascript" src="app/services/signUpService.js"></script>
+
 
 
 
@@ -46,7 +46,7 @@
   <div class="container">
 
     <!-- Page Content goes here -->
-    <div ng-view=""></div>
+    <div ng-view="" id="viewContainer"></div>
 
   </div>
 </main>
