--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
   <script type="text/javascript" src="app/controllers/dashBoardController.js"></script>
   <script type="text/javascript" src="app/controllers/loginController.js"></script>
   <script type="text/javascript" src="app/controllers/signUpController.js"></script>
+  <script type="text/javascript" src="app/controllers/entrepriseController.js"></script>
 
 
 
