--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,9 @@
   <script type="text/javascript" src="bower_components/jquery-locationpicker-plugin/dist/locationpicker.jquery.js"></script>
 
   <script type="text/javascript" src="bower_components/angular/angular.js"></script>
-  <script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
 
+
+  <script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
   <script type="text/javascript" src="bower_components/ng-table/dist/ng-table.js"></script>
   <link rel="stylesheet" type="text/css" href="bower_components/ng-table/dist/ng-table.css">
 
@@ -23,12 +24,9 @@
   <script type="text/javascript" src="app/controllers/signUpController.js"></script>
   <script type="text/javascript" src="app/controllers/entrepriseController.js"></script>
 
-
-
-
-
   <script type="text/javascript" src="app/appRoute.js"></script>
   <script type="text/javascript" src="app/app.js"></script>
+  <script type="text/javascript" src="file.js"></script>
 
   <link rel="stylesheet" type="text/css" href="bower_components/materialize/dist/css/materialize.css" media="screen,projection">
 
@@ -45,7 +43,6 @@
 
 <main>
   <div class="container">
-
     <!-- Page Content goes here -->
     <div ng-view="" id="viewContainer"></div>
 
@@ -53,8 +50,6 @@
 </main>
 
 <div ng-include="'app/views/footer.html'"></div>
-
-
 
 </body>
 </html>
